load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@rules_license//rules:license.bzl", "license")
load("//lib:biome.bzl", "biome", "biome_test")
load("//lib:topiary.bzl", "topiary")
load("//lib:typos.bzl", "typos_test")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:LGPL-3.0-or-later",
    ],
    license_text = "LICENSE",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
    "extensions.bzl",
    "biome.json",
])

typos_test(
    name = "typos",
    exclude = [
        "**/assets.bzl",
        "**/vendor/**",
    ],
)

biome(
    name = "check_write",
    config = "//:biome.json",
)

biome_test(
    name = "check",
    config = "//:biome.json",
)

topiary(
    name = "topiary",
    extensions = ["json"],
)

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
        "**/assets.bzl",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    exclude_patterns = [
        "**/assets.bzl",
    ],
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    workspace = ":MODULE.bazel",
)
