load("@buildifier_prebuilt//:rules.bzl", "buildifier_test")
load("@rules_license//rules:license.bzl", "license")
load("//lib:formatter.bzl", "formatter", "formatter_test")
load("//lib:typos.bzl", "typos_test")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:LGPL-3.0-or-later",
    ],
    license_text = "LICENSE",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
    "extensions.bzl",
    "biome.json",
])

formatter(
    name = "format",
    config = ":formatter.json",
    exclude = [
        "vendor/dcomment/dcomment.cpp",
    ],
    mode = "fix",
    tools = {
        "@biome": "biome",
        "@buildifier_prebuilt//:buildifier": "buildifier",
    },
)

formatter_test(
    name = "check",
    config = ":formatter.json",
    exclude = [
        "vendor/dcomment/dcomment.cpp",
    ],
    mode = "check",
    tags = [
        "external",
        "no-cache",
        "no-sandbox",
    ],
    tools = {
        "@biome": "biome",
        "@shellcheck": "shellcheck",
        "@typos": "typos",
        "@buildifier_prebuilt//:buildifier": "buildifier",
    },
)

typos_test(
    name = "typos",
    exclude = [
        "**/assets.bzl",
        "**/vendor/**",
    ],
)

buildifier_test(
    name = "lint",
    size = "small",
    exclude_patterns = [
        "**/assets.bzl",
    ],
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    workspace = ":MODULE.bazel",
)
