load("@rules_license//rules:license.bzl", "license")
load("//lib:defs.bzl", "formatter", "formatter_test")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:LGPL-3.0-or-later",
    ],
    license_text = "LICENSE",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
    "extensions.bzl",
    "biome.json",
])

formatter(
    name = "format",
    config = ":formatter.json",
    mode = "fix",
    tools = {
        "@biome": "biome",
        "@buildifier_prebuilt//:buildifier": "buildifier",
        "@go_default_sdk//:bin/gofmt": "gofmt",
    },
)

formatter_test(
    name = "check",
    config = ":formatter.json",
    exclude = [
        "vendor/dcomment/dcomment.cpp",
    ],
    mode = "check",
    tags = [
        "external",
        "no-cache",
        "no-sandbox",
    ],
    tools = {
        "@biome": "biome",
        "@shellcheck": "shellcheck",
        "@typos": "typos",
        "@buildifier_prebuilt//:buildifier": "buildifier",
    },
)
