module(
    name = "bzlparty_tools",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")

#ifndef _BZLPARTY_RELEASE_
bazel_dep(name = "rules_go", version = "0.48.0")
#endif

tools = use_extension("//:extensions.bzl", "tools")
tools.biome()
tools.fd()
tools.goawk()
tools.json_bash()
tools.templ()
tools.ripgrep()
tools.sha()
tools.shellcheck()
tools.shellspec()
tools.typos()
use_repo(
    tools,
    "biome",
    "fd",
    "goawk",
    "json_bash",
    "ripgrep",
    "sha",
    "shellcheck",
    "shellspec",
    "templ",
    "typos",
)

register_toolchains(
    "@biome//:all",
    "@fd//:all",
    "@goawk//:all",
    "@json_bash//:all",
    "@templ//:all",
    "@ripgrep//:all",
    "@sha//:all",
    "@shellcheck//:all",
    "@shellspec//:all",
    "@typos//:all",
)
