module(
    name = "bzlparty_tools",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
bazel_dep(name = "rules_license", version = "0.0.8")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")

#ifdef _BZLPARTY_RELEASE_PRIVATE_
bazel_dep(name = "rules_go", version = "0.49.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
use_repo(go_sdk, "go_default_sdk")
#endif

tools = use_extension("@bzlparty_tools//:extensions.bzl", "tools")
tools.biome()
tools.fd()
tools.goawk()
tools.templ()
tools.ripgrep()
tools.sha()
tools.shellcheck()
tools.shellspec()
tools.typos()
use_repo(
    tools,
    "biome",
    "fd",
    "goawk",
    "ripgrep",
    "sha",
    "shellcheck",
    "shellspec",
    "templ",
    "typos",
)

register_toolchains(
    "@biome//:all",
    "@fd//:all",
    "@goawk//:all",
    "@templ//:all",
    "@ripgrep//:all",
    "@sha//:all",
    "@shellcheck//:all",
    "@shellspec//:all",
    "@typos//:all",
)
