load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "lib",
    bzl_library_target = "//lib:defs",
)

stardoc_with_diff_test(
    name = "platforms",
    bzl_library_target = "//lib:platforms",
)

stardoc_with_diff_test(
    name = "toolchains",
    bzl_library_target = "//lib:toolchains",
)

stardoc_with_diff_test(
    name = "utils",
    bzl_library_target = "//lib:utils",
)

stardoc_with_diff_test(
    name = "workspace",
    bzl_library_target = "//lib:workspace",
)

stardoc_with_diff_test(
    name = "sh",
    bzl_library_target = "//sh:docs",
)

update_docs()
