load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

package(default_visibility = ["//visibility:public"])

stardoc_with_diff_test(
    name = "utils",
    bzl_library_target = "//docs/bzl:utils",
)

stardoc_with_diff_test(
    name = "toolchains",
    bzl_library_target = "//docs/bzl:toolchains",
)

stardoc_with_diff_test(
    name = "sh",
    bzl_library_target = "//sh:docs",
)

update_docs()
