load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bzlparty_tools//:goawk.bzl", "goawk")

goawk(
    name = "goawk",
    srcs = ["awk_test_data.txt"],
    out = "result.txt",
    file = "test.awk",
)

diff_test(
    name = "goawk_test",
    file1 = ":result.txt",
    file2 = ":result_expected.txt",
)

build_test(
    name = "http_binary_test",
    targets = [
        "@http_binary_file//bundler-linux-amd64",
        "@http_binary_file//bundler-linux-amd64:bin",  # actual file path
        "@http_binary_output//linux",
        "@http_binary_custom//:bin",
        "@http_binary_custom_2//:custom_bin",
    ],
)

build_test(
    name = "github_test",
    targets = [
        "@github_binary_file//bundler-linux-amd64",
        "@github_archive//:LICENSE",
    ],
)
