load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bzlparty_tools//lib:goawk.bzl", "goawk")
load("@bzlparty_tools//lib:jql.bzl", "jql_test")
load("@bzlparty_tools//lib:ripgrep.bzl", "ripgrep", "ripgrep_binary")

goawk(
    name = "goawk",
    srcs = ["awk_test_data.txt"],
    out = "goawk_result.txt",
    file = "test.awk",
)

diff_test(
    name = "goawk_test",
    file1 = ":goawk_result.txt",
    file2 = ":goawk_result_expected.txt",
)

ripgrep(
    name = "ripgrep",
    srcs = ["ripgrep_test_data.txt"],
    out = "ripgrep_result.txt",
    pattern = "oo$$",
)

ripgrep_binary(
    name = "ripgrep_bin",
    data = [
        "ripgrep_test_data.txt",
    ],
)

diff_test(
    name = "ripgrep_test",
    file1 = ":ripgrep_result.txt",
    file2 = ":ripgrep_result_expected.txt",
)

jql_test(
    name = "json_validate",
    srcs = ["test.json"],
)

build_test(
    name = "http_binary_test",
    targets = [
        "@http_binary_file//bundler-linux-amd64",
        "@http_binary_file//bundler-linux-amd64:bin",  # actual file path
        "@http_binary_output//linux",
        "@http_binary_custom//:bin",
        "@http_binary_custom_2//:custom_bin",
    ],
)

build_test(
    name = "github_test",
    targets = [
        "@github_binary_file//bundler-linux-amd64",
        "@github_archive//:LICENSE",
    ],
)
