module(name = "bzlparty_tools_e2e")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "bzlparty_tools")
local_path_override(
    module_name = "bzlparty_tools",
    path = "..",
)

ext = use_extension("@bzlparty_tools_e2e//:extension.bzl", "ext")
use_repo(ext, "http_binary_file")
use_repo(ext, "http_binary_output")
use_repo(ext, "http_binary_custom")
use_repo(ext, "http_binary_custom_2")
use_repo(ext, "github_binary_file")
use_repo(ext, "github_archive")
