load("@aspect_bazel_lib//lib:bats.bzl", "bats_test")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "tag",
    srcs = ["tag.sh"],
    env = {
        "_SCRIPT_NAME": "git:tag",
    },
    tags = ["manual"],
)

bats_test(
    name = "tag_test",
    srcs = ["tag.bats"],
    data = ["tag.sh"],
)
