load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob([
    "*.bzl",
]))

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//lib/private:sha",
        "//lib/private:shellspec",
    ],
)

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    deps = ["//lib/private:platforms"],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    deps = [
        "//lib/private:assets",
        "//lib/private:toolchains",
    ],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    deps = [
        "//lib/private:assets",
        "//lib/private:toolchains",
    ],
)

bzl_library(
    name = "workspace",
    srcs = ["workspace.bzl"],
    deps = [
        "//lib/private:create_module_bazel",
        "//lib/private:formatter",
        "//lib/private:git_archive",
    ],
)
