load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob([
    "*.bzl",
]))

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":resolved_toolchains",
        "//lib/private:helpers",
        "//lib/private:platforms",
        "//lib/private/toolchains:assets",
        "//lib/private/toolchains:assets_bundle",
        "//lib/private/toolchains:repositories",
        "//lib/private/utils:create_module_bazel",
        "//lib/private/utils:formatter",
        "//lib/private/utils:git_archive",
        "//lib/private/utils:sha",
        "//lib/private/utils:shellspec",
    ],
)

bzl_library(
    name = "resolved_toolchains",
    srcs = ["resolved_toolchains.bzl"],
    visibility = [
        "//toolchains:__pkg__",
    ],
)
