load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//lib/private:helpers.bzl", "release_arg")

package(default_visibility = ["//visibility:public"])

exports_files(glob([
    "*.bzl",
]))

release_arg(
    name = "release_dir",
    build_setting_default = ".",
)

release_arg(
    name = "release_tag",
    build_setting_default = "main",
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":resolved_toolchains",
        "//lib/private:helpers",
        "//lib/private:platforms",
        "//lib/private/toolchains:assets_bundle",
        "//lib/private/toolchains:cmd_assets",
        "//lib/private/toolchains:multi_platform_assets",
        "//lib/private/toolchains:platform_asset",
        "//lib/private/toolchains:repositories",
        "//lib/private/utils:dcomment",
        "//lib/private/utils:formatter",
        "//lib/private/utils:git_archive",
        "//lib/private/utils:release_notes",
        "//lib/private/utils:sha",
        "//lib/private/utils:shellspec",
        "//lib/private/utils:versioned_module_bazel",
    ],
)

bzl_library(
    name = "resolved_toolchains",
    srcs = ["resolved_toolchains.bzl"],
    visibility = [
        "//toolchains:__pkg__",
    ],
)
