load("//lib:dist.bzl", "dist")

dist(
    name = "dist",
    srcs = [
        ":root_files",
        "//lib:files",
        "//platforms:BUILD.bazel",
        "//platforms:host.bzl",
        "//sh:files",
        "//toolchains:BUILD.bazel",
    ],
)

filegroup(
    name = "root_files",
    srcs = [
        "//:BUILD.bazel",
        "//:LICENSE",
        "//:MODULE.bazel",
        "//:README.md",
        "//:WORKSPACE",
    ],
    tags = ["manual"],
)
