load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//lib:shellcheck.bzl", "shellcheck_test")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "shasums",
    srcs = ["shasums.sh"],
    tags = ["manual"],
)

sh_binary(
    name = "tag",
    srcs = ["tag.sh"],
    env = {
        "_SCRIPT_NAME": "git:tag",
    },
    tags = ["manual"],
)

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
)

shellcheck_test(
    name = "lint",
    srcs = [
        # "shasums.sh",
        "tag.sh",
    ],
)
