load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "tag",
    srcs = ["tag.bash"],
    env = {
        "_SCRIPT_NAME": "git:tag",
    },
    tags = ["manual"],
)

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
)
