load("//toolchains/private:generate_toolchains.bzl", "generate_toolchains")
load(":toolchains.bzl", "bzlparty_toolchains")

package(default_visibility = ["//visibility:public"])

TOOLS = [
    "fd",
    "goawk",
    "jql",
    "ripgrep",
    "sha",
    "shellcheck",
    "shellspec",
    "topiary",
    "typos",
    "xsv",
]

generate_toolchains(
    name = "generate_toolchains",
    tools = TOOLS,
)

bzlparty_toolchains()
