load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//toolchains/private:defs.bzl", "create_bzl_file")
load(":toolchains.bzl", "bzlparty_toolchains")

package(default_visibility = ["//visibility:public"])

TOOLS = [
    "biome",
    "fd",
    "goawk",
    "json_bash",
    "ripgrep",
    "sha",
    "shellcheck",
    "shellspec",
    "templ",
    "typos",
]

create_bzl_file(
    name = "tools_bzl",
    out = "tools.bzl",
    template = "tools",
    tools = TOOLS,
)

create_bzl_file(
    name = "toolchains_bzl",
    out = "toolchains.bzl",
    template = "toolchains",
    tools = TOOLS,
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    deps = [
        "//lib:resolved_toolchains",
    ],
)

bzlparty_toolchains()
