load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//toolchains/private:defs.bzl", "create_bzl_file")
load(":toolchains.bzl", "bzlparty_toolchains")
load(":tools.bzl", "TOOLS")

package(default_visibility = ["//visibility:public"])

bzlparty_toolchains()

#ifdef _BZLPARTY_RELEASE_PRIVATE_
create_bzl_file(
    name = "tools_bzl",
    out = "tools_assets.bzl",
    template = "tools",
    tools = TOOLS,
)

create_bzl_file(
    name = "toolchains_bzl",
    out = "toolchains.bzl",
    template = "toolchains",
    tools = TOOLS,
)
#endif

bzl_library(
    name = "external",
    srcs = ["external.bzl"],
)

bzl_library(
    name = "tools",
    srcs = ["tools.bzl"],
)

bzl_library(
    name = "toolchains",
    srcs = ["toolchains.bzl"],
    deps = [
        "//lib:resolved_toolchains",
    ],
)
