load(":goawk.bzl", "goawk")
load(":ripgrep.bzl", "ripgrep")

package(default_visibility = ["//visibility:public"])

goawk(
    name = "bzl_files",
    srcs = [":files.txt"],
    out = "bzl_files.txt",
    file = ":filter.awk",
)

ripgrep(
    name = "bazel_files",
    srcs = [":files.txt"],
    out = "bazel_files.txt",
    pattern = "\\.bazel",
)
