load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    visibility = [
        "//lib:__pkg__",
        "//lib/private:__subpackages__",
    ],
    deps = [
        ":helpers",
        "@platforms//host:constraints_lib",
    ],
)

bzl_library(
    name = "helpers",
    srcs = ["helpers.bzl"],
    visibility = [
        "//lib:__pkg__",
        "//lib/private:__subpackages__",
    ],
)
