load("//lib:toolchains.bzl", "multi_platform_assets")

VERSION = "v1.27.0"

SUPPORTED_PLATFORMS = [
    "darwin_amd64",
    "darwin_arm64",
    "linux_amd64",
    "linux_arm64",
    "windows_amd64",
]

GITHUB_URL = "https://github.com/benhoyt/goawk/releases/download/%s" % VERSION

multi_platform_assets(
    name = "goawk",
    platforms = SUPPORTED_PLATFORMS,
    url = "%s/goawk_%s_{platform}.{ext}" % (GITHUB_URL, VERSION),
)
