load("//lib:defs.bzl", "multi_platform_assets")
load("//toolchains:tools.bzl", VERSION = "GOAWK_VERSION")

SUPPORTED_PLATFORMS = [
    "darwin_amd64",
    "darwin_arm64",
    "linux_amd64",
    "linux_arm64",
    "windows_amd64",
]

GITHUB_URL = "https://github.com/benhoyt/goawk/releases/download/v%s" % VERSION

multi_platform_assets(
    name = "goawk",
    platforms = SUPPORTED_PLATFORMS,
    url = "%s/goawk_v%s_{platform}.{ext}" % (GITHUB_URL, VERSION),
)
