load("//lib:toolchains.bzl", "multi_platform_assets")

VERSION = "0.2.2"

GITHUB_URL = "https://github.com/h4l/json.bash/archive/refs/tags/v%s.tar.gz" % VERSION

multi_platform_assets(
    name = "json_bash",
    binary = "json.bash-%s/json.bash" % VERSION,
    platforms = ["host"],
    set_windows_binary_ext = False,
    url = GITHUB_URL,
)
