load("//lib:defs.bzl", "multi_platform_assets")

VERSION = "14.1.0"

SUPPORTED_PLATFORMS = [
    "darwin_amd64",
    "darwin_arm64",
    "linux_amd64",
    "windows_amd64",
]

GITHUB_URL = "https://github.com/BurntSushi/ripgrep/releases/download/%s" % VERSION

multi_platform_assets(
    name = "ripgrep",
    binary = "rg",
    platforms = SUPPORTED_PLATFORMS,
    platforms_map = {
        "darwin_amd64": "x86_64-apple-darwin",
        "darwin_arm64": "aarch64-apple-darwin",
        "linux_amd64": "x86_64-unknown-linux-musl",
        "windows_amd64": "x86_64-pc-windows-gnu",
    },
    prefix = "ripgrep-%s-{platform}/" % VERSION,
    url = "%s/ripgrep-%s-{platform}.{ext}" % (GITHUB_URL, VERSION),
)
