load("//lib:platform_binary.bzl", "platform_binaries")

VERSION = "0.10.0"

SUPPORTED_PLATFORMS = [
    "darwin_amd64",
    "darwin_arm64",
    "linux_amd64",
    "linux_arm64",
]

GITHUB_URL = "https://github.com/koalaman/shellcheck/releases/download/v%s" % VERSION

platform_binaries(
    name = "shellcheck",
    binary = "shellcheck-v%s/shellcheck" % VERSION,
    platforms = SUPPORTED_PLATFORMS,
    platforms_map = {
        "darwin_amd64": "darwin.x86_64",
        "darwin_arm64": "darwin.aarch64",
        "linux_amd64": "linux.x86_64",
        "linux_arm64": "linux.aarch64",
    },
    url = "%s/shellcheck-v%s.{platform}.tar.xz" % (GITHUB_URL, VERSION),
)
